# work

./: .gitignore  README.md  index.html  inject-data.sh  package.json  pnpm-lock.yaml  start.sh  vite.config.ts
data-process/: .env.example  README.md  cluster.py  main.py  pyproject.toml
src/: App.tsx  types.ts
src/components/: accordion-group.tsx  category-section.tsx  conversation-sheet.tsx  error-state.tsx  filter-chip.tsx  image-preview.tsx  loading-state.tsx  message-content.tsx  ticket-row.tsx
src/hooks/: use-ticket-data.ts
